--- a/CRUDOYE/CRUDOYE.csproj
+++ b/CRUDOYE/CRUDOYE.csproj
@@ -61,11 +61,17 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
-    <Compile Include="KelolaFilm.cs">
+    <Compile Include="EditFilm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="KelolaFilm.Designer.cs">
-      <DependentUpon>KelolaFilm.cs</DependentUpon>
+    <Compile Include="EditFilm.Designer.cs">
+      <DependentUpon>EditFilm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TambahFilm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TambahFilm.Designer.cs">
+      <DependentUpon>TambahFilm.cs</DependentUpon>
     </Compile>
     <Compile Include="LihatFilm.cs">
       <SubType>Form</SubType>
@@ -90,8 +96,11 @@
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="KelolaFilm.resx">
-      <DependentUpon>KelolaFilm.cs</DependentUpon>
+    <EmbeddedResource Include="EditFilm.resx">
+      <DependentUpon>EditFilm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TambahFilm.resx">
+      <DependentUpon>TambahFilm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LihatFilm.resx">
       <DependentUpon>LihatFilm.cs</DependentUpon>
